--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/http": "^2.3.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",    
+    "@angular/router": "^3.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.21",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.4.0",
     "rxjs": "^5.0.1",
